Bug 66502 - VIEWING: Position of "Choose..." button is wrong in Insert Footnote/Endnote dialog (Japanese)
Summary: VIEWING: Position of "Choose..." button is wrong in Insert Footnote/Endnote d...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.0.1 rc
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.2.0 target:4.1.0.2 targe...
Keywords: regression
: 66538 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-07-02 11:36 UTC by Naruhiko Ogasawara
Modified: 2013-07-03 13:14 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Wrong result:「選択(C)...」 (in English, "Choose...") covers other button (15.13 KB, image/png)
2013-07-02 11:36 UTC, Naruhiko Ogasawara
Details
Excepted result: in English UI, "Choose..." button seems right position and no other buttons are covered. (16.10 KB, image/png)
2013-07-02 11:38 UTC, Naruhiko Ogasawara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Naruhiko Ogasawara 2013-07-02 11:36:38 UTC
Created attachment 81868 [details]
Wrong result:「選択(C)...」 (in English, "Choose...") covers other button

Problem description: 

Steps to reproduce:
1. Select Japanese as a User Interface language
2. Select menu "挿入(Insert)" -> "脚注/文末脚注 (Footnote/Endnote)"
3. You can see a dialog "脚注/文末脚注 (Footnote/Endnote)" as an attached file "LibreOffice-4.0-Japanese-Footnote-Windows7.png".

Current behavior:
The button 「選択(C)...」 (in English, "Choose...") covers other button.  The position of the button seems wrong.

Note: I haven't tried whole languages, but simplified Chinese has same problem.


Expected behavior:
As a English result, any buttons should not covered by "Choose..." button.
Operating System: All
Version: 4.1.0.1 rc
Last worked in: 3.6.6.2 release
Comment 1 Naruhiko Ogasawara 2013-07-02 11:38:44 UTC
Created attachment 81869 [details]
Excepted result: in English UI, "Choose..." button seems right position and no other buttons are covered.
Comment 2 Jorendc 2013-07-02 12:24:46 UTC
Thanks for reporting!

I can reproduce this behavior using Mac OSX 10.8.4 with LibreOffice 4.1.0.1 RC.

@Caolan: ping :)

Kind regards,
Joren
Comment 3 Caolán McNamara 2013-07-02 14:10:08 UTC
yikes, it must be the case that the width calculation does not take into account the mnemonics that are added to the original string. Which would be an old bug we always had but never mattered until now
Comment 4 Commit Notification 2013-07-02 14:28:46 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=00601259144f5b49b516581ca6ae28fc6e524030

Resolves: fdo#66502 set AutoMnemonics before calculating layout



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2013-07-02 14:30:28 UTC
Nope, I was calculating the sizes before the auto mnemonics got set. Bah.. fixed in master, gerrit reviews for 4-1 and 4-0 logged.
Comment 6 Commit Notification 2013-07-02 14:37:25 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7fa6f79ea8ec07884689aff36d7856a1b6f98c00&h=libreoffice-4-1

Resolves: fdo#66502 set AutoMnemonics before calculating layout


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2013-07-02 14:37:45 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c6c5636a69fa9261e02ac357dec0e8987a5ad829&h=libreoffice-4-0

Resolves: fdo#66502 set AutoMnemonics before calculating layout


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Jorendc 2013-07-03 13:14:10 UTC
*** Bug 66538 has been marked as a duplicate of this bug. ***