Resolves: fdo#66502 set AutoMnemonics before calculating layout

Change-Id: I3274ec9e8e4e1f61f0108a3e6ba64107128736c2