vcl/source/window/dialog.cxx
@@ -701,6 +701,9 @@ void Dialog::StateChanged( StateChangedType nType )
 
     if ( nType == STATE_CHANGE_INITSHOW )
     {
+        if ( GetSettings().GetStyleSettings().GetAutoMnemonic() )
+            ImplWindowAutoMnemonic( this );
+
         if (isLayoutEnabled())
         {
             mbIsCalculatingInitialLayoutSize = true;
@@ -708,9 +711,6 @@ void Dialog::StateChanged( StateChangedType nType )
             setOptimalLayoutSize();
             mbIsCalculatingInitialLayoutSize = false;
         }
-
-        if ( GetSettings().GetStyleSettings().GetAutoMnemonic() )
-            ImplWindowAutoMnemonic( this );
 
         if ( !HasChildPathFocus() || HasFocus() )
             GrabFocusToFirstControl();
